--- a/Informe1/Secciones/Actividad05.tex
+++ b/Informe1/Secciones/Actividad05.tex
@@ -3,5 +3,5 @@
 \begin{itemize}
 	\item Usar el servicio REST Web Api, se pudo notar que necesita mas código para su implementación.
 	\item El servicio REST se basa en conocer sobre HTTP.
-	\item Nosotros hemos usado el formato JSON pero para la implementación de REST se puede usar cualquier tipo de descripcion.
+	\item Se uso el formato JSON pero para la implementación de REST se puede usar cualquier tipo de descripcion.
 \end{itemize}
