--- a/Informe1/Secciones/Actividad06.tex
+++ b/Informe1/Secciones/Actividad06.tex
@@ -1,1 +1,11 @@
 \section{REFERENCIAS} 
+
+American Chemical Society, 2005, Química. Un proyecto de la ACS. Ed. Reverté, Barcelona.
+
+Atkins J. y Jones, L., 2012, Principios de Química. Los caminos del descubrimiento, 5ª Ed. Editorial Médica Panamericana, Madrid.
+
+Chang, R., 2010, Química, 10ª edición, McGraw-Hill.
+
+Masterton W.L., Hurley, C.N., 2003, Química: Principios y Reacciones. 4ª edición, Thomsom Editores, Madrid.
+
+Petrucci R.H., Hawood W.S., 2003, Química general, 8ª edición, Prentice Hall
