--- a/Informe1/InformeLaboratorio01.tex
+++ b/Informe1/InformeLaboratorio01.tex
@@ -48,7 +48,7 @@ TITULO:\\
 
 \vspace*{0.1in}
 \begin{Large}
-\textbf{INFORME DE LABORATORIO No 01} \\
+\textbf{INFORME DE LABORATORIO Nº 01} \\
 \end{Large}
 
 \vspace*{0.3in}
