--- a/Informe1/Secciones/Actividad01.tex
+++ b/Informe1/Secciones/Actividad01.tex
@@ -3,11 +3,13 @@
 \begin{itemize}
 \subsection{Objetivos:}
 	\item Conocer los fundamentos del servicio REST Web Api.
-	\item Saber usar los controladores usando Entity Framework.
+	\item Conocer los controladores de Entity Framework.
 	\item Poder intercambiar datos a la base de datos con el formato JSON usando Postman.
 
 \subsection{Equipos, materiales, programas y recursos utilizados:}
-	\item Computadora con sistema operativo Windows 10.
+	\item SQL Server 2017
+	\item Computadora
+	\item Sistema Operativo windows 10
 	\item Microsoft Visual Studio 2017
 	\item Postman 7.0.7 para (x86) o (x64)
 
